--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/material-top-tabs": "^6.2.4",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.1",
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-gesture-handler": "^2.6.2",
+    "react-native-pager-view": "^6.0.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.17.0",
-    "react-native-svg": "^13.2.0"
+    "react-native-svg": "^13.2.0",
+    "react-native-tab-view": "^3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
